--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@nestjs/common": "^10.3.10",
     "@nestjs/core": "^10.3.10",
     "@nestjs/testing": "^10.3.10",
+    "@semantic-release/changelog": "6.0.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.12",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
@@ -71,6 +72,7 @@
     "nock": "^13.5.4",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "semantic-release": "24.0.0",
     "sort-package-json": "2.10.0",
     "stream-mock": "^2.0.5",
     "ts-jest": "^29.2.3",
