--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,9 @@ jobs:
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+      
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: NPM version bump
         run: pnpm version --no-git-tag-version ${{ steps.publish_version.outputs.RELEASE_VERSION }}
@@ -49,4 +52,4 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
-          pnpm release
+          pnpm run release
