--- a/package.json
+++ b/package.json
@@ -38,10 +38,6 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {
-    "got-cjs": "file:/Users/ilhamhanif07/Documents/OpenSourceProject/got-cjs/got-cjs-14.4.2.tgz",
-    "rxjs": "^7.8.1"
-  },
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
@@ -65,6 +61,7 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "globals": "15.9.0",
+    "got-cjs-compat": "14.4.3",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
@@ -73,6 +70,7 @@
     "nock": "^13.5.4",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "rxjs": "^7.8.1",
     "semantic-release": "24.0.0",
     "sort-package-json": "2.10.0",
     "stream-mock": "^2.0.5",
