--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "dependencies": {
+    "got-cjs-compat": "14.4.3"
+  },
   "devDependencies": {
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
@@ -61,7 +64,6 @@
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "globals": "15.9.0",
-    "got-cjs-compat": "14.4.3",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
     "jest-extended": "^4.0.2",
