--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: "Build package"
+        run: pnpm build
+
       - name: Run Semantic Release
         env: 
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
