--- a/.releaserc
+++ b/.releaserc
@@ -10,6 +10,13 @@
         "changelogTitle": "# Changelog"
       }
     ],
+    [
+      "@semantic-release/git",
+      {
+        "assets": ["CHANGELOG.md"],
+        "message": "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
+      }
+    ],
     "@semantic-release/npm",
     "@semantic-release/github"
   ],
