--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "license": "ISC",
   "author": "",
-  "main": "src/index.ts",
+  "main": "dist/src/index.ts",
   "types": "dits/src/index.d.ts",
   "files": [
     "dist"
@@ -53,6 +53,7 @@
     "@nestjs/core": "^10.3.10",
     "@nestjs/testing": "^10.3.10",
     "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/git": "10.0.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.12",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
