--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "author": "",
   "main": "dist/src/index.ts",
-  "types": "dits/src/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "files": [
     "dist"
   ],
