--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,13 +55,6 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
+          export HUSKY=0
           pnpm run release
-      - name: Commit and push version updates
-        run: |
-          git config user.name "${GITHUB_ACTOR}"
-          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          git add package.json
-          git commit -m "chore(release): ${RELEASE_VERSION}"
-          git push origin main
-        env:
-          RELEASE_VERSION: ${{ steps.release.outputs.version }}
+          unset HUSKY
